Uploading course image full functionality and design

--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@ NEXT_PUBLIC_APP_URL = "localhost:3000"
 
 # Produuction
 # NEXT_PUBLIC_APP_URL = "https://www.akademiawilka.pl"
+
+FTP_HOST = maestro.atthost24.pl
+FTP_PORT = 21
+FTP_USER = maestro_akademia_wilka_FTP
+FTP_PASS = Xo2bj1yYKqVDu
+FILE_SERVER_URL = http://maestro.atthost24.pl
