--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "basic-ftp": "^5.0.5",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -27,10 +28,13 @@
     "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
+    "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
+    "react-image-crop": "^11.0.6",
+    "react-quill": "^2.0.0",
     "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
