--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.28",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
@@ -39,6 +40,7 @@
     "react-image-crop": "^11.0.6",
     "react-quill": "^2.0.0",
     "react-spinners": "^0.14.1",
+    "react-tooltip": "^5.28.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
