--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev & npx next-video sync -w",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
+    "@ffmpeg/ffmpeg": "^0.12.10",
     "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.18.0",
@@ -25,12 +26,15 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^11.3.28",
+    "get-video-duration": "^4.1.0",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
+    "next-video": "^1.1.4",
     "nodemailer": "^6.9.14",
     "quill": "^2.0.2",
     "react": "^18",
@@ -39,12 +43,14 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-image-crop": "^11.0.6",
+    "react-player": "^2.16.0",
     "react-quill": "^2.0.0",
     "react-spinners": "^0.14.1",
     "react-tooltip": "^5.28.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
+    "video.js": "^8.17.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
