Login and logout rebuild and fix

--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ FTP_PORT = 21
 FTP_USER = maestro_akademia_wilka_FTP
 FTP_PASS = Xo2bj1yYKqVDu
 FILE_SERVER_URL = http://maestro.atthost24.pl
+
+NEXT_AUTH_SECRET="siU0e6o+9u8BDGVvXBgf4UCijP+75Y3MyVxLR2UQyFk=" # Added by `npx auth`. Read more: https://cli.authjs.dev
