--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@types/next-auth": "^3.15.0",
     "basic-ftp": "^5.0.5",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
