--- a/.env
+++ b/.env
@@ -5,10 +5,9 @@ NEXT_PUBLIC_APP_URL = "localhost:3000"
 # Produuction
 # NEXT_PUBLIC_APP_URL = "https://www.akademiawilka.pl"
 
-FTP_HOST = maestro.atthost24.pl
+FTP_HOST = "wolfpath.atthost24.pl"
 FTP_PORT = 21
-FTP_USER = maestro_akademia_wilka_FTP
-FTP_PASS = Xo2bj1yYKqVDu
+FTP_USER = "wolfpath_akademia_wilka"
+FTP_PASS = "Qo05#m@6B3z2e"
 FILE_SERVER_URL = http://maestro.atthost24.pl
-
-NEXT_AUTH_SECRET="siU0e6o+9u8BDGVvXBgf4UCijP+75Y3MyVxLR2UQyFk=" # Added by `npx auth`. Read more: https://cli.authjs.dev
+AUTH_SECRET=siU0e6o+9u8BDGVvXBgf4UCijP+75Y3MyVxLR2UQyFk= # Added by `npx auth`. Read more: https://cli.authjs.dev
