--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@types/next-auth": "^3.15.0",
+    "axios": "^1.7.7",
     "basic-ftp": "^5.0.5",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -50,6 +51,7 @@
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
+    "stripe": "^16.10.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
