image cropper rebuilded

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # Development
 DATABASE_URL = "postgresql://alex:@localhost:5432/akademia_wilka"
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+NODE_ENV="production"
 
 # Produuction
 # NEXT_PUBLIC_APP_URL = "https://www.akademiawilka.pl"
@@ -8,7 +9,8 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 FTP_HOST = "wolfpath.atthost24.pl"
 FTP_PORT = 21
 FTP_USER = "wolfpath_akademia_wilka"
-FTP_PASS = "Qo05#m@6B3z2e"
+FTP_PASS = "Lk5$$!r23@UIi"
+FTP_ADDRES = "http://wolfpath.atthost24.pl/akademia_wilka"
 
 EMAIL_HOST= "wolfpath.atthost24.pl"
 EMAIL_PORT= 465
