Change production build

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 # Development
 DATABASE_URL = "postgresql://alex:@localhost:5432/akademia_wilka"
+DATABASE_URL_PRODUCTION = "mysql://28482_Aka_Wilka:To2nSeY*3ZjXB@wolfpath.atthost24.pl:3306/28482_Aka_Wilka"
+
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NODE_ENV="production"
 
