--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-image-crop": "^11.0.6",
