--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.9.0",
-    "@nextui-org/button": "^2.0.38",
-    "@nextui-org/card": "^2.0.34",
-    "@nextui-org/divider": "^2.0.32",
-    "@nextui-org/dropdown": "^2.1.31",
-    "@nextui-org/image": "^2.0.32",
-    "@nextui-org/input": "^2.2.5",
-    "@nextui-org/listbox": "^2.1.27",
-    "@nextui-org/navbar": "^2.0.37",
-    "@nextui-org/react": "^2.6.11",
-    "@nextui-org/system": "^2.2.6",
-    "@nextui-org/tabs": "^2.0.37",
-    "@nextui-org/theme": "^2.2.11",
+    "@heroui/button": "2.2.10",
+    "@heroui/card": "2.2.10",
+    "@heroui/divider": "2.2.6",
+    "@heroui/dropdown": "2.3.10",
+    "@heroui/image": "2.2.6",
+    "@heroui/input": "2.4.10",
+    "@heroui/listbox": "2.3.10",
+    "@heroui/navbar": "2.2.9",
+    "@heroui/react": "2.6.14",
+    "@heroui/system": "2.4.7",
+    "@heroui/tabs": "2.2.8",
+    "@heroui/theme": "2.4.6",
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
