--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@ffmpeg/core": "^0.12.10",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@hello-pangea/dnd": "^16.6.0",
-    "@hookform/resolvers": "^3.9.0",
     "@heroui/button": "2.2.10",
     "@heroui/card": "2.2.10",
     "@heroui/divider": "2.2.6",
@@ -26,6 +25,7 @@
     "@heroui/system": "2.4.7",
     "@heroui/tabs": "2.2.8",
     "@heroui/theme": "2.4.6",
+    "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -52,6 +52,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^11.15.0",
     "get-video-duration": "^4.1.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.424.0",
     "next": "^14.2.5",
     "next-auth": "^5.0.0-beta.20",
@@ -70,6 +71,7 @@
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
+    "react-use-cart": "^1.14.0",
     "stripe": "^16.12.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -80,6 +82,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/fluent-ffmpeg": "^2.1.25",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-beautiful-dnd": "^13.1.8",
