--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.5.0",
     "@types/next-auth": "^3.15.0",
+    "@vercel/blob": "^0.27.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "basic-ftp": "^5.0.5",
