--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroui/react": "^2.6.14",
     "@heroui/system": "^2.4.7",
     "@heroui/theme": "^2.4.6",
+    "@prisma/client": "^6.3.1",
     "@supabase/supabase-js": "^2.48.1",
     "framer-motion": "^12.0.11",
     "next": "15.1.6",
@@ -33,6 +34,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
+    "prisma": "^6.3.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
