--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "@heroui/react": "^2.6.14",
     "@heroui/system": "^2.4.7",
     "@heroui/theme": "^2.4.6",
+    "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.3.1",
     "@supabase/supabase-js": "^2.48.1",
     "framer-motion": "^12.0.11",
     "next": "15.1.6",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-toastify": "^11.0.3",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
